; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace_ptss.c_dtrace_ptss_free_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace_ptss.c_dtrace_ptss_free_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.dtrace_ptss_page = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dtrace_ptss_free_page(%struct.proc* %0, %struct.dtrace_ptss_page* %1) #0 {
  %3 = alloca %struct.proc*, align 8
  %4 = alloca %struct.dtrace_ptss_page*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.proc* %0, %struct.proc** %3, align 8
  store %struct.dtrace_ptss_page* %1, %struct.dtrace_ptss_page** %4, align 8
  %10 = load %struct.proc*, %struct.proc** %3, align 8
  %11 = getelementptr inbounds %struct.proc, %struct.proc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @get_task_map_reference(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %4, align 8
  %16 = getelementptr inbounds %struct.dtrace_ptss_page, %struct.dtrace_ptss_page* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* @PAGE_SIZE, align 4
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @mach_vm_deallocate(i32 %22, i32 %23, i32 %24)
  %26 = load %struct.dtrace_ptss_page*, %struct.dtrace_ptss_page** %4, align 8
  %27 = getelementptr inbounds %struct.dtrace_ptss_page, %struct.dtrace_ptss_page* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i64 0
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @mach_vm_deallocate(i32 %32, i32 %33, i32 %34)
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @vm_map_deallocate(i32 %36)
  ret void
}

declare dso_local i32 @get_task_map_reference(i32) #1

declare dso_local i32 @mach_vm_deallocate(i32, i32, i32) #1

declare dso_local i32 @vm_map_deallocate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
